# assembly-theory

./: .gitignore  .gitmodules  CITATION.cff  Cargo.toml  HACKING.md  README-crate.md  README.md  flake.nix  pyproject.toml
.github/workflows/: paper.yml  python.yml  rust.yml
assembly_theory/: README.md  __init__.py
benches/: benchmark.rs  search_benchmark.rs
data/: .gitattributes  0002.mol  0004.mol  0005.mol  0006.mol  0008.mol  0011.mol  0013.mol  0016.mol  0018.mol  0020.mol  0021.mol  0022.mol  0024.mol  0028.mol  0029.mol  0030.mol  0031.mol  0032.mol  0033.mol  0034.mol  0035.mol  0037.mol  0038.mol  0043.mol  0044.mol  0047.mol  0050.mol  0055.mol  0056.mol  0057.mol  0058.mol  0060.mol  0061.mol  0063.mol  0065.mol  0067.mol  0069.mol  0070.mol  0073.mol  (+510 more)
data/acyclic_hydrocarbons/: ach_0.mol  ach_1.mol  ach_10.mol  ach_100.mol  ach_101.mol  ach_102.mol  ach_103.mol  ach_104.mol  ach_105.mol  ach_106.mol  ach_107.mol  ach_108.mol  ach_109.mol  ach_11.mol  ach_110.mol  ach_111.mol  ach_112.mol  ach_113.mol  ach_114.mol  ach_115.mol  ach_116.mol  ach_117.mol  ach_118.mol  ach_119.mol  ach_12.mol  ach_120.mol  ach_121.mol  ach_122.mol  ach_123.mol  ach_124.mol  ach_125.mol  ach_126.mol  ach_127.mol  ach_128.mol  ach_129.mol  ach_13.mol  ach_130.mol  ach_131.mol  ach_132.mol  ach_133.mol  (+377 more)
data/checks/: acetylthiourea.mol  anthracene.mol  anthracene.sdf  aspartic.mol  aspartic.sdf  aspirin.mol  aspirin.sdf  b12.sdf  benzene.mol  benzene.sdf  caffeine.mol  cbd.sdf  chrysene.mol  cubane.sdf  cyanidin.mol  ethylenethiourea.mol  fentanyl.sdf  fosfructose.mol  histidine.sdf  ma-index.csv  master.csv  methylphenidate.sdf  morphine.mol  morphine.sdf  naphthalene.mol  naphthalene.sdf  pyrazole.mol  pyrene.mol  reproterol.mol  thc.sdf  thiouracil.mol  tryptophan.sdf  xylopyranose.mol
data/coconut_180/: 0001.mol  0002.mol  0003.mol  0004.mol  0005.mol  0006.mol  0007.mol  0008.mol  0009.mol  0010.mol  0011.mol  0012.mol  0013.mol  0014.mol  0015.mol  0016.mol  0017.mol  0018.mol  0019.mol  0020.mol  0021.mol  0022.mol  0023.mol  0024.mol  0025.mol  0026.mol  0027.mol  0028.mol  0029.mol  0030.mol  0031.mol  0032.mol  0033.mol  0034.mol  0035.mol  0036.mol  0037.mol  0038.mol  0039.mol  0040.mol  (+140 more)
data/coconut_220/: 0001.mol  0002.mol  0003.mol  0004.mol  0005.mol  0006.mol  0007.mol  0008.mol  0009.mol  001.mol  0010.mol  0011.mol  0012.mol  0013.mol  0014.mol  0015.mol  0016.mol  0017.mol  0018.mol  0019.mol  002.mol  0020.mol  0021.mol  0022.mol  0023.mol  0024.mol  0025.mol  0026.mol  0027.mol  0028.mol  0029.mol  003.mol  0030.mol  0031.mol  0032.mol  0033.mol  0034.mol  0035.mol  0036.mol  0037.mol  (+401 more)
data/coconut_55/: 01.mol  02.mol  03.mol  04.mol  05.mol  06.mol  07.mol  08.mol  09.mol  10.mol  11.mol  12.mol  13.mol  14.mol  15.mol  16.mol  17.mol  18.mol  19.mol  20.mol  21.mol  22.mol  23.mol  24.mol  25.mol  26.mol  27.mol  28.mol  29.mol  30.mol  31.mol  32.mol  33.mol  34.mol  35.mol  36.mol  37.mol  38.mol  39.mol  (+17 more)
paper/: Makefile  README.md  main.tex  paper.bib  paper.md  pyproject.toml  ref.bib
pyorca/: README.md  __init__.py
python/: README.md
scripts/: README.md  alkene-sampling.py  dataset_curation.ipynb  dataset_info.py  dataset_plotting.py  generate-ma-index.sh  requirements.txt  ring-data.py  search_evals.py  search_tree.py
src/: assembly.rs  bounds.rs  canonize.rs  enumerate.rs  kernels.rs  lib.rs  loader.rs  main.rs  matches.rs  memoize.rs  molecule.rs  object.rs  objects.rs  pathways.rs  python.rs  reductions.rs  state.rs  strings.rs  utils.rs  vf3.rs
test_suite_1/: propyl_formate.mol
tests/: reference_datasets.rs  suite1.csv  suite2.csv  suite3.csv
(+3643 files in other folders)
