[package]
name = "orca"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bit-set = "0.8.0"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
petgraph = "0.6.5"
pyo3 = "0.23.4"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["python"]
python = []

[lib]
name = "orca"
path = "src/lib.rs"
crate-type = ["rlib","cdylib"]

[[bench]]
name = "benchmark"
harness = false
