# pyproject.toml
[build-system]
requires = ["setuptools", "maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ORCA"
version = "0.0.0"
description = "Open, Reproducible Assembly index Calculations"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE-MIT"}
authors = [
  {name = "Devansh Vimal", email = "dvpatel5@asu.edu"},
  {name = "Cole Mathis", email = "cole.mathis@asu.edu"},
  {name = "Joshua Daymude", email = "jdaymude@asu.edu"},
]
maintainers = [
  {name = "Devansh Vimal", email = "dvpatel5@asu.edu"},
  {name = "Cole Mathis", email = "cole.mathis@asu.edu"},
  {name = "Joshua Daymude", email = "jdaymude@asu.edu"},
]

dependencies = []

[project.urls]
repository = "https://github.com/DaymudeLab/ORCA"

[tool.maturin]
python-source = "python"
module-name = "orca._lib"
bindings = "pyo3"
features = ["pyo3/extension-module"]