[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
dynamic = ["name", "version"]
description = "Open, Reproducible Calculation of Assembly Indices"
readme = "python/README.md"
requires-python = ">=3.10"
license = {file = "LICENSE-MIT"}
authors = [
  {name = "Devansh Vimal", email = "dvpatel5@asu.edu"},
  {name = "Cole Mathis", email = "cole.mathis@asu.edu"},
  {name = "Joshua Daymude", email = "jdaymude@asu.edu"},
]
maintainers = [
  {name = "Devansh Vimal", email = "dvpatel5@asu.edu"},
  {name = "Cole Mathis", email = "cole.mathis@asu.edu"},
  {name = "Joshua Daymude", email = "jdaymude@asu.edu"},
]

[project.urls]
repository = "https://github.com/DaymudeLab/assembly-theory"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source   = "python"
python-packages = ["assembly_theory"]
